Refine .gitignore to specify generated files for scpsave

--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,6 @@ go.work.sum
 # .vscode/
 
 # generated files
-cmd/**/*.log
-cmd/**/config*.yaml
+cmd/scpsave/*.log
+cmd/scpsave/config*.yaml
+cmd/scpsave/working/*
